<resources>
    <string name="app_name">CoinTrading</string>

    <!-- common -->
    <string name="common_description">공통 이미지</string>

    <!-- MainActivity -->
    <string name="activity_main_menu_main">메인</string>
    <string name="activity_main_menu_setting">설정</string>

    <!-- CoinListFragment -->
    <string name="fragment_coin_list_info_group_name">코인이름</string>
    <string name="fragment_coin_list_info_group_now">현재가</string>
    <string name="fragment_coin_list_info_group_percent">전일대비</string>
    <string name="fragment_coin_list_info_group_total_price">거래대금</string>
    <string name="fragment_coin_list_input_coin">코인을 입력해주세요.</string>
    <string name="fragment_coin_list_search">검색</string>
    <string name="fragment_coin_list_buy_group_buy">매수</string>
    <string name="fragment_coin_list_buy_group_sell">매도</string>
    <string name="fragment_coin_list_buy_group_quantity_hint">매수할 개수를 입력해주세요.</string>
    <string name="fragment_coin_list_buy_group_hold_quantity">보유중인 코인 개수 %s개</string>
    <string name="fragment_coin_list_buy_group_my_cash">보유 금액 : %s원</string>
    <string name="fragment_coin_list_buy_group_max_count">구매 가능 개수 : %s개</string>
    <string name="fragment_coin_list_buy_group_now">코인 현재가 : %s원</string>
    <string name="fragment_coin_list_buy_group_description">* 해당 코인 보유중일경우 추가 매수가 불가능 합니다.\n 매도시 보유중인 해당 코인 전부 매도가 됩니다.</string>

    <!-- SettingFragment -->
    <string name="fragment_setting_my_cash">현금 보유현황 : %s원</string>
    <string name="fragment_setting_total_my_cash">종합 자산현황 : %s원</string>
    <string name="fragment_setting_my_cash_charge">충전</string>
    <string name="fragment_setting_my_cash_charge_hint">충전할 금액을 입력하세요.</string>
    <string name="fragment_setting_charge_fail">금액 충전을 실패했습니다.</string>
    <string name="fragment_setting_charge_success">금액 충전을 완료했습니다.</string>
    <string name="fragment_setting_coin_info_group_coin_name">코인이름</string>
    <string name="fragment_setting_coin_info_group_buy_price">구매가</string>
    <string name="fragment_setting_coin_info_group_now_price">현재가</string>
    <string name="fragment_setting_coin_info_group_rate_return">수익률</string>
    <string name="fragment_setting_coin_info_group_empty">구매한 코인이 없습니다.</string>
    <string name="fragment_setting_reset">초기화</string>
</resources>