<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="cash"
            type="String" />

        <variable
            name="totalCash"
            type="String" />

        <variable
            name="fragment"
            type="com.example.cointrading.domain.main.setting.SettingFragment" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_coin_info_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/fragment_coin_list_info_group_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/fragment_setting_coin_info_group_buy_price"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/fragment_setting_coin_info_group_now_price"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/fragment_setting_coin_info_group_rate_return"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="50"
            tools:listitem="@layout/item_buy_coin_list" />

        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:text="@string/fragment_setting_coin_info_group_empty"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:visibility="gone"
            tools:ignore="SpUsage"
            tools:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@{cash}"
            android:textColor="@color/white"
            android:textSize="16dp"
            tools:ignore="SpUsage"
            tools:text="보유 현금 : 100,000원" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@{totalCash}"
            android:textColor="@color/white"
            android:textSize="16dp"
            tools:ignore="SpUsage"
            tools:text="총 보유 자산 : 100,000원" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_charge"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/fragment_setting_my_cash_charge_hint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:lines="1"
                android:paddingHorizontal="4dp"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@color/white"
                android:onClick="@{() -> fragment.chargeCash()}"
                android:text="@string/fragment_setting_my_cash_charge"
                android:textColor="@color/black"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:onClick="@{() -> fragment.reset()}"
            android:text="@string/fragment_setting_reset"
            android:textColor="@color/black" />

    </LinearLayout>

</layout>