<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <EditText
            android:id="@+id/et_coin"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/white"
            android:hint="@string/fragment_coin_list_input_coin"
            android:importantForAutofill="no"
            android:inputType="text"
            android:lines="1"
            android:paddingHorizontal="4dp"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintEnd_toStartOf="@id/bt_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/bt_search"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:background="@color/white"
            android:text="@string/fragment_coin_list_search"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="@id/et_coin"
            app:layout_constraintEnd_toStartOf="@id/iv_refresh"
            app:layout_constraintTop_toTopOf="@id/et_coin"
            tools:ignore="SpUsage" />

        <ImageView
            android:id="@+id/iv_refresh"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/common_description"
            android:src="@drawable/ic_refresh"
            app:layout_constraintBottom_toBottomOf="@id/et_coin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_coin" />

        <LinearLayout
            android:id="@+id/ll_coin_info_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            app:layout_constraintTop_toBottomOf="@id/et_coin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/fragment_coin_list_info_group_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/fragment_coin_list_info_group_now"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/fragment_coin_list_info_group_percent"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/fragment_coin_list_info_group_total_price"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_coin_info_group"
            tools:itemCount="50"
            tools:listitem="@layout/item_coin_list" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_buy_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_coin_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="@id/iv_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_close"
                tools:ignore="SpUsage"
                tools:text="비트코인" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/common_description"
                android:onClick="@{() -> clBuyGroup.setVisibility(View.INVISIBLE)}"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_buy_quantity"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="6dp"
                android:background="@color/white"
                android:hint="@string/fragment_coin_list_buy_group_quantity_hint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/iv_close" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="@id/et_buy_quantity"
                app:layout_constraintStart_toStartOf="@id/et_buy_quantity"
                app:layout_constraintTop_toBottomOf="@id/et_buy_quantity" />

            <TextView
                android:id="@+id/tv_my_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_buy_quantity"
                tools:ignore="SpUsage"
                tools:text="보유 금액 : 10,000원" />

            <TextView
                android:id="@+id/tv_now_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_my_cash"
                tools:ignore="SpUsage"
                tools:text="코인 현재가 : 10000원" />

            <TextView
                android:id="@+id/tv_hold_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_now_price"
                tools:ignore="SpUsage"
                tools:text="보유중인 코인 개수 : 10개" />

            <TextView
                android:id="@+id/tv_max_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_hold_quantity"
                tools:ignore="SpUsage"
                tools:text="구매 가능 개수 : 35개" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/fragment_coin_list_buy_group_description"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_max_count"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/btn_buy"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:background="@color/white"
                android:text="@string/fragment_coin_list_buy_group_buy"
                android:textColor="@color/black"
                android:textSize="16dp"
                app:layout_constraintEnd_toStartOf="@id/btn_sell"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/btn_sell"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="1dp"
                android:background="@color/white"
                android:text="@string/fragment_coin_list_buy_group_sell"
                android:textColor="@color/black"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_buy"
                app:layout_constraintTop_toBottomOf="@id/tv_description"
                tools:ignore="SpUsage" />

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/btn_buy"
                app:layout_constraintEnd_toStartOf="@id/btn_sell"
                app:layout_constraintStart_toEndOf="@id/btn_buy"
                app:layout_constraintTop_toTopOf="@id/btn_buy" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/btn_sell" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintBottom_toTopOf="@id/btn_sell" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>